Add gdk_cursor_get_cursor_type

https://bugzilla.gnome.org/show_bug.cgi?id=624087