gdk/gdkcursor.c
@@ -97,3 +97,20 @@ gdk_cursor_new (GdkCursorType cursor_type)
 {
   return gdk_cursor_new_for_display (gdk_display_get_default(), cursor_type);
 }
+
+/**
+ * gdk_cursor_get_cursor_type:
+ * @cursor:  a #GdkCursor
+ *
+ * Returns the cursor type for this cursor.
+ *
+ * Return value: a #GdkCursorType
+ *
+ * Since: 2.22
+ **/
+GdkCursorType
+gdk_cursor_get_cursor_type (GdkCursor *cursor)
+{
+  g_return_val_if_fail (cursor != NULL, GDK_BLANK_CURSOR);
+  return cursor->type;
+}
